Set theme jekyll-theme-minimal

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-minimal
 
 title: Wind-Up Tataru, the FFXIV Discord Bot!
 logo: /assets/img/tataru.png
