Shrink the Tataru image

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 
-title: Wind-Up Tataru, the FFXIV Discord Bot!
+title: Wind-Up Tataru!
 logo: /assets/img/tataru.png
 show_downloads: false
